--- a/sample/maserie/templates/register.html
+++ b/sample/maserie/templates/register.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-  <form action="/action_page.php">
+  <form method="post">
     <div class="container">
       <h1>Register</h1>
       <p>Please fill in this form to create an account.</p>
