--- a/Serious/app/templates/base.html
+++ b/Serious/app/templates/base.html
@@ -51,8 +51,12 @@
 					</a>
 					<nav class="top-nav-area w-100">
 					<div class="user-panel">
+                        {% if current_user.is_anonymous %}
 						<a href="{{ url_for('login')}}">Login</a>/
 						<a href="{{ url_for('register')}}">Register</a>
+                        {% else %}
+                         <a href="{{ url_for('logout')}}">Logout</a>
+                        {% endif %}
 					</div>
 
 
@@ -60,7 +64,9 @@
 						<ul class="main-menu primary-menu">
 							<li><a href="{{ url_for('home')}}">Accueil</a></li>
 							<li><a href="{{ url_for('series', starting=' ', page=1)}}">Séries</a></li>
+                            {% if not current_user.is_anonymous %}
 							<li><a href="{{ url_for('my_list', starting=' ', page=1)}}">Ma Liste</a></li>
+                            {% endif %}
 						</ul>
 					</nav>
 				</div>
